--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>jQuery brbanks example.</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-  <script src="jquery.brbanks.js"></script>
+  <script src="/jquery.brbanks/jquery.brbanks.js"></script>
   <style type='text/css'>
     * { margin:0 0 0 0; padding: 0;}
     .brbanks-banks {
